overflow problem solved

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,8 +10,7 @@
 }
 
 html,
-body,
-#root {
+body {
   height: 100%;
   overflow: hidden;
 }
